# surrpy

./: Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
src/operations/create/: core.rs
src/operations/delete/: core.rs
src/types/: table.rs
surrpy/: __init__.py  async_connection_interface.py  asyncio_runtime.py  connection_interface.py  errors.py  http.py  ws.py
surrpy/async_execution_mixins/: auth.py  create.py  query.py  set.py  update.py
surrpy/execution_mixins/: auth.py  create.py  query.py  set.py  update.py
tests/: README.md
tests/integration/async/: test_auth.py  test_create.py  test_invalidate.py  test_merge.py  test_namespace.py  test_set.py  test_signup.py  test_update.py
tests/integration/blocking/: test_auth.py  test_create.py  test_invalidate.py  test_merge.py  test_namespace.py  test_set.py  test_signup.py  test_update.py
tests/scripts/: local_build.py  local_build_ci.py  runner.py
